--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "version": "1.0.0",
+  "description": "As part of the backend development team for a new user management system, you need to implement the functionality that allows storing user data into MongoDB. The backend is already set up, and the task is to:",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
